# ERSaveManager

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
saveman/: CMakeLists.txt  app.rc  config.c  embedded_face_data.h  ersave.c  face_dialog.c  file_dialog.c  locale.c  locale.h  main.c  resource.h  ui_controls.c  ui_controls.h
src/: CMakeLists.txt  app.rc  config.c  config.h  ersave.c  ersave.h  face_dialog.c  face_dialog.h  locale.c  locale.h  main.c  resource.h  save_compress.c  save_compress.h  ui_controls.c  ui_controls.h
src/ERSaveManager/: CMakeLists.txt  README.md  app.manifest  config.c  config.h  embedded_face_data.c  ersave.c  face_dialog.c  locale.c  locale.h  main.c  resource.h  theme.c  theme.h  ui_controls.c
src/Praxis/: CMakeLists.txt  README.md  app.manifest  app.rc  backend_registry.c  backend_registry.h  bnd4_test_format.h  config.c  config.h  game_backend.h  hotkey.c  hotkey.h  locale.c  locale.h  main.c  praxis_hotkey_actions.c  praxis_hotkey_actions.h  praxis_main_menu.c  praxis_main_menu.h  praxis_selftest.c  praxis_selftest.h  praxis_toast.c  praxis_toast.h  praxis_window_common.c  praxis_window_common.h  profile_store.c  profile_store.h  profile_store_io.c  profile_store_io.h  resource.h  restore_safe.c  restore_safe.h  ring_backup.c  ring_backup.h  save_tree.c  save_tree.h  save_tree_internal.h  save_tree_notify.c  save_tree_notify.h  save_tree_walk.c  (+7 more)
src/Praxis/backends/: er_backend.c
src/Praxis/dialogs/: edit_backup_profile.c  edit_backup_profile.h  edit_game_profile.c  edit_game_profile.h  game_profile_manager.c  game_profile_manager.h  hotkey_settings.c  hotkey_settings.h  migration_wizard.c  migration_wizard.h
src/common/: CMakeLists.txt  common.c  config_core.c  config_core.h  ersave.c  ersave.h  file_dialog.c  file_dialog.h  locale_core.c  locale_core.h  save_compress.c  save_compress.h  theme_core.c  theme_core.h
